--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@ function copyToClipboard(element) {
 <form action="http://steamcommunity.com/id/spectrogaming">
     <input type="submit" value="Steam (Page)">
 </form>
+<h1> Works of Art </h1>
+<form action="http://jaredsbizarreautism.ga/">
+    <input type="submit" value="Jared's Bizarre Autism">
+</form>
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><font size="-7" color="white">
 <p id="p1">NanoSpectro#1102</p>
