--- a/index.html
+++ b/index.html
@@ -30,14 +30,12 @@ function copyToClipboard(element) {
 <form action="http://jaredsbizarreautism.ga/">
     <input type="submit" value="Jared's Bizarre Autism">
 </form>
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><font size="-7" color="white">
-<p id="p1">NanoSpectro#1102</p>
-<p id="p2">NanoSpectro#3967</p><br/>
-<p id="p3"></p><br/>
-<p id="p4"></p><br/>
-<p id="p5"></p><br/>
-<p id="p6"></p><br/>
+<p id="p1" style="display:none;">NanoSpectro#1102</p>
+<p id="p2" style="display:none;">NanoSpectro#3967</p>
+<p id="p3" style="display:none;">NanoSpectro</p>
+<p id="p4"></p>
+<p id="p5"></p>
+<p id="p6"></p>
 </font>
 </center>
 </body>
