--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ function copyToClipboard(element) {
 <form action="http://spanishletters.ga/">
     <input type="submit" value="Spanish Letters">
 </form>
+<div style="line-height:10%;"><br></div>
 <div class="container">
 <h1> Other Stuff </h1>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
