--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ function copyToClipboard(element) {
 </div>
 <h1> Works of Art </h1>
 <form action="http://jaredsbizarreautism.ga/">
-    <input type="submit" style="width:200px" value="Jared's Bizarre Autism">
+    <input type="submit" value="Jared's Bizarre Autism">
 </form>
 <p id="p1" style="display:none;">NanoSpectro#1102</p>
 <p id="p2" style="display:none;">NanoSpectro#3967</p>
