--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ function copyToClipboard(element) {
     <input type="submit" style="width:200px" value="Spanish Letters">
 </form>
 <div style="line-height:10%;"><br></div>
+  <button class="button1" style="width:200px" onclick="copyToClipboard('#p4')">Bellringers</button>
+<div style="line-height:10%;"><br></div>
 <div class="container">
 <h1> Other Stuff </h1>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -49,7 +51,21 @@ function copyToClipboard(element) {
 <p id="p1" style="display:none;">NanoSpectro#1102</p>
 <p id="p2" style="display:none;">NanoSpectro#3967</p>
 <p id="p3" style="display:none;">NanoSpectro</p>
-<p id="p4"></p>
+<p id="p4">9/25- What are the different elements of a basic HTML page structure?  Describe each one in detail and how they format a web page to look and operate functionally.
+The basic elements of an HTML webpage are the header, and the body. The header lets you specify the page’s title and the body lets you set things like page color.
+
+9/26- What are the three different types of website structures?  Define them in detail.
+The three different types of website structures are hierarchical, linear and random. Hierarchical website structure is where each page is under a different, related page. Random website structure is where there is no set structure and everything is random. Linear structure is where each page is linked to a single page in linear fashion.
+
+9/27- What is the purpose of a website link embedded within a webpage?  What does it allow users to accomplish when they visit your website?
+The purpose of a website link embedded in a web page is navigating your website, or linking to others. It allows users to go to different pages when needed.
+
+9/28- What are the steps involved when creating links to open up within your website?  
+To create a link in your website you would open up the <a> tag and put in “href=”your link here”” and then close the tag after putting in the text or image that you want to make a link.
+
+9/29- When you embed links within your website, you can change their properties, attributes, and even allow them to open up in new windows.  What are some other forms of embedded links?  Why is it so important to give links specific properties and attributes?
+Some other forms of embedded links are using images as links, or creating bookmarks within the page so the reader can jump to a specific point. It is important to give links specific properties and attributes because sometimes you need a link to act in a certain way to achieve your goal.
+</p>
 <p id="p5"></p>
 <p id="p6"></p>
 </font>
