--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@ function copyToClipboard(element) {
 
 <h1> School Stuff </h1>
 <form action="http://spanishletters.ga/">
-    <input type="submit" style="width:200px" value="Spanish Letters">
+    <input type="submit" style="width:225px" value="Spanish Letters">
 </form>
 <div style="line-height:10%;"><br></div>
 <div class="container">
 <h1> Other Stuff </h1>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<button class="button1" type="button"  style="width:200px;" data-toggle="collapse" data-target="#demo">Cool Stuff</button>
+<button class="button1" type="button"  style="width:225px;" data-toggle="collapse" data-target="#demo">Cool Stuff</button>
 <div style="line-height:10%;"><br></div>
 <div id="demo" class="collapse">
-<button class="button1" style="width:200px" onclick="copyToClipboard('#p2')">Discord</button>
+<button class="button1" style="width:225px" onclick="copyToClipboard('#p2')">Discord</button>
 <div style="line-height:10%;"><br></div>
-<button class="button1" style="width:200px" onclick="copyToClipboard('#p1')" width="600px">Battle.net</button>
+<button class="button1" style="width:225px" onclick="copyToClipboard('#p1')" width="600px">Battle.net</button>
 <div style="line-height:10%;"><br></div>
-<button class="button1" style="width:200px" onclick="copyToClipboard('#p3')">PSN and XBL</button>
+<button class="button1" style="width:225px" onclick="copyToClipboard('#p3')">PSN and XBL</button>
 <div style="line-height:10%;"><br></div>
 <form action="http://steamcommunity.com/id/spectrogaming">
-    <input type="submit" value="Steam" style="width:200px;">
+    <input type="submit" value="Steam" style="width:225px;">
 </form>
 </link>
 <p align="center"> Black buttons (other than the dropdown button) will copy stuff to your clipboard. Blue buttons will open a new page. </p>
@@ -45,6 +45,9 @@ function copyToClipboard(element) {
 <h1> Works of Art </h1>
 <form action="http://jaredsbizarreautism.ga/">
     <input type="submit" value="Jared's Bizarre Autism">
+</form>
+<form action="https://nanospectr.github.io/destinybingo/">
+    <input type="submit" value="Destiny Bingo">
 </form>
 <p id="p1" style="display:none;">NanoSpectro#1102</p>
 <p id="p2" style="display:none;">NanoSpectro#3967</p>
